--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=voss.a.robert@gmail.com&su=Feedback-SpanishBingo">Feedback</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                        <li><a class="btn code" href="">See the code</a></li>
+                        <li><a class="btn code" href="https://github.com/roboalex123/SpanishBingo">See the code</a></li>
                 </ul>
             </div>
         </div>
