--- a/Vegetables.html
+++ b/Vegetables.html
@@ -34,32 +34,32 @@
                     </thead>
                       <tbody id="words">
                       <tr>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">la cebolla  <img src="Onion.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el apio  <img src="Celery.png" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el (ji)tomate  <img src="Tomato.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el pimiento  <img src="Peppers.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el brocoli  <img src="Brocoli.png" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">la cebolla  <img src="Onion.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el apio  <img src="Celery.png" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el (ji)tomate  <img src="Tomato.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el pimiento  <img src="Peppers.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el brocoli  <img src="Brocoli.png" width="50%"></td>
                       </tr>
                       <tr>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la zanahoria  <img src="Carrot.png" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el chícharo <img src="chicharo.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la coliflor  <img src="Coliflower.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el elote  <img src="Corn.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el pepino  <img src="Cucumber.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la zanahoria  <img src="Carrot.png" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el chícharo <img src="chicharo.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la coliflor  <img src="Coliflower.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el elote  <img src="Corn.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el pepino  <img src="Cucumber.jpg" width="50%"></td>
                       </tr>
                       <tr>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la manzana <img src="Eggplant.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">el ejote <img src="GreenBeans.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la lechuga <img src="Lettuce.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el limon <img src="Lime.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">el hongo <img src="Mushroom.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la manzana <img src="Eggplant.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">el ejote <img src="GreenBeans.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la lechuga <img src="Lettuce.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el limon <img src="Lime.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">el hongo <img src="Mushroom.jpg" width="50%"></td>
                       </tr>
                       <tr>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la calabaza <img src="Squash.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la papa <img src="Potato.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el repllo <img src="Repollo.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">la ensalada <img src="Salad.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la epinaca <img src="Spinach.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la calabaza <img src="Squash.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la papa <img src="Potato.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el repllo <img src="Repollo.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">la ensalada <img src="Salad.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la epinaca <img src="Spinach.jpg" width="50%"></td>
                       </tr>
                     </tbody>
                   </table>
