Fixed hambuger menu

--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
             <p>This was a project for my Spanish 2 class.  We were told to make 4X5 bingo cards relating to the foods that we were learning about.  So I took the opprotunity to showcase the skills that I have been working on lately, and make it a workig website.  These were the results.</p>
            </div>
        </div>
+
+       <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
