Added Meats and fixed vegetables

--- a/Vegetables.html
+++ b/Vegetables.html
@@ -48,7 +48,7 @@
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el pepino  <img src="Cucumber.jpg" width="50%"></td>
                       </tr>
                       <tr>
-                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la manzana <img src="Eggplant.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la brenjena <img src="Eggplant.jpg" width="50%"></td>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">el ejote <img src="GreenBeans.jpg" width="50%"></td>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la lechuga <img src="Lettuce.jpg" width="50%"></td>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el limon <img src="Lime.jpg" width="50%"></td>
@@ -57,7 +57,7 @@
                       <tr>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la calabaza <img src="Squash.jpg" width="50%"></td>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la papa <img src="Potato.jpg" width="50%"></td>
-                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el repllo <img src="Repollo.jpg" width="50%"></td>
+                          <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >el repollo <img src="Repollo.jpg" width="50%"></td>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words">la ensalada <img src="Salad.jpg" width="50%"></td>
                           <td draggable="true" onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" >la epinaca <img src="Spinach.jpg" width="50%"></td>
                       </tr>
