--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 
         <div class="row">
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-xs-12 col-md-6 col-lg-4">
                 <div class="thumbnail">
-                    <img width="50%" src="FruitsCard.PNG" alt="Fruit Bingo Card">
+                    <img width="50%" src="FruitsCard.PNG" alt="Fruits Bingo Card">
                     <div class="caption">
                         <h4>Fruits</h4>
                         <p>This is the card for 20 of the fruits in Spanish.</p>
@@ -54,13 +54,23 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-xs-12 col-md-6 col-lg-4">
                     <div class="thumbnail">
-                        <img width="50%" src="VegetablesCard.PNG" alt="Vegetable Bingo Card">
+                        <img width="50%" src="VegetablesCard.PNG" alt="Vegetables Bingo Card">
                         <div class="caption">
                             <h4>Vegetables</h4>
                             <p>This is the card for 20 of the vegetables in Spanish.</p>
                             <p><a href="Vegetables.html" class="btn btn-primary" role="button">Play Vegetable Bingo</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="thumbnail">
+                        <img width="50%" src="MeatsCard.PNG" alt="Meats Bingo Card">
+                        <div class="caption">
+                            <h4>Meats</h4>
+                            <p>This is the card for 20 of the meats, fish, and other miscillaneous food items in Spanish.</p>
+                            <p><a href="Meats.html" class="btn btn-primary" role="button">Play Meat Bingo</a></p>
                         </div>
                     </div>
                 </div>
