Colors and shortened meat bingo description

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
         <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
                 <div class="thumbnail">
                     <img width="50%" src="FruitsCard.PNG" alt="Fruits Bingo Card">
                     <div class="caption">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
                     <div class="thumbnail">
                         <img width="50%" src="VegetablesCard.PNG" alt="Vegetables Bingo Card">
                         <div class="caption">
@@ -64,12 +64,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-4">
+                <div class="col-xs-12 col-md-6 col-lg-4 card">
                     <div class="thumbnail">
                         <img width="50%" src="MeatsCard.PNG" alt="Meats Bingo Card">
                         <div class="caption">
                             <h4>Meats</h4>
-                            <p>This is the card for 20 of the meats, fish, and other miscillaneous food items in Spanish.</p>
+                            <p>This is the card for 20 of the meats in Spanish.</p>
                             <p><a href="Meats.html" class="btn btn-primary" role="button">Play Meat Bingo</a></p>
                         </div>
                     </div>
