--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                <h2 class="panel-title"><a name="aboutProject">A</a>bout the project:</h2>
         </div>
            <div class="panel-body">
-            <p>This was a project for my Spanish 2 class.  We were told to make 4X5 bingo cards relating to the foods that we were learning about.  So I took the opprotunity to showcase the skills that I have been working on lately, and make it a workig website.  These were the results.</p>
+            <p>This was a project for my Spanish 2 class.  We were told to make 4X5 bingo cards relating to the foods that we were learning about.  So I took the opprotunity to showcase the skills that I have been working on lately, and make it a working website.  These were the results.</p>
            </div>
        </div>
 
