Fixed meats error (la naranja)

--- a/Meats.html
+++ b/Meats.html
@@ -51,8 +51,8 @@
                           <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >el cordero <img src="Lamb.jpg" width="50%"></td>
                           <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >la longosta <img src="Lobster.jpg" width="50%"></td>
                           <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >la chuleta de cerdo <img src="PorkChop.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >la naranja <img src="Salmon.jpg" width="50%"></td>
-                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >el salmón <img src="Seafood.jpg" width="50%"></td>
+                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >el salmón <img src="Salmon.jpg" width="50%"></td>
+                          <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >los mariscos <img src="Seafood.jpg" width="50%"></td>
                       </tr>
                       <tr>
                           <td onclick="if (this.bgColor=='#f2f2f2'){this.bgColor='#0080ff'} else {this.bgColor='#f2f2f2'}" class="words" draggable="true" >la salchicha <img src="Sausage.jpg" width="50%"></td>
