Added reflexive verbs & in name there's no "food"

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Spanish Foods Bingo Cards</h1>
+            <h1>Spanish Bingo Cards</h1>
         </div>
 
 
         <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-4 card">
+            <div class="col-xs-12 col-md-6 col-lg-3 card">
                 <div class="thumbnail">
                     <img width="50%" src="FruitsCard.PNG" alt="Fruits Bingo Card">
                     <div class="caption">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-4 card">
+            <div class="col-xs-12 col-md-6 col-lg-3 card">
                     <div class="thumbnail">
                         <img width="50%" src="VegetablesCard.PNG" alt="Vegetables Bingo Card">
                         <div class="caption">
@@ -64,13 +64,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-4 card">
+                <div class="col-xs-12 col-md-6 col-lg-3 card">
                     <div class="thumbnail">
                         <img width="50%" src="MeatsCard.PNG" alt="Meats Bingo Card">
                         <div class="caption">
                             <h4>Meats</h4>
                             <p>This is the card for 20 of the meats in Spanish.</p>
                             <p><a href="Meats.html" class="btn btn-primary" role="button">Play Meat Bingo</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 card">
+                    <div class="thumbnail">
+                        <img width="50%" src="reflexiveVerbsCard.PNG" alt="Meats Bingo Card">
+                        <div class="caption">
+                            <h4>Reflexive Verbs</h4>
+                            <p>This is the card for 20 of the reflexive verbs in Spanish.</p>
+                            <p><a href="reflexive.html" class="btn btn-primary" role="button">Play Reflexive Verbs Bingo</a></p>
                         </div>
                     </div>
                 </div>
