--- a/reflexive.html
+++ b/reflexive.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Lobster" rel="stylesheet">
+    <link rel="icon" href="https://image.spreadshirtmedia.com/image-server/v1/mp/designs/1011584051,width=178,height=178,version=-726782083/cartoon-hands-thumbs-t-shirt-pointing.png">
 <meta charset="utf-8" />
 
 <title>Bingo</title>
