--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
         <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-3 card">
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
                 <div class="thumbnail">
                     <img width="50%" src="FruitsCard.PNG" alt="Fruits Bingo Card">
                     <div class="caption">
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-3 card">
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
                     <div class="thumbnail">
                         <img width="50%" src="VegetablesCard.PNG" alt="Vegetables Bingo Card">
                         <div class="caption">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 card">
+                <div class="col-xs-12 col-md-6 col-lg-4 card">
                     <div class="thumbnail">
                         <img width="50%" src="MeatsCard.PNG" alt="Meats Bingo Card">
                         <div class="caption">
@@ -75,16 +75,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 card">
-                    <div class="thumbnail">
-                        <img width="50%" src="reflexiveVerbsCard.PNG" alt="Meats Bingo Card">
-                        <div class="caption">
-                            <h4>Reflexive Verbs</h4>
-                            <p>This is the card for 20 of the reflexive verbs in Spanish.</p>
-                            <p><a href="reflexive.html" class="btn btn-primary" role="button">Play Reflexive Verbs Bingo</a></p>
-                        </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
+                <div class="thumbnail">
+                    <img width="50%" src="reflexiveVerbsCard.PNG" alt="Meats Bingo Card">
+                    <div class="caption">
+                        <h4>Reflexive Verbs</h4>
+                        <p>This is the card for 20 of the reflexive verbs in Spanish.</p>
+                        <p><a href="reflexive.html" class="btn btn-primary" role="button">Play Reflexive Verbs Bingo</a></p>
                     </div>
                 </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
+                <div class="thumbnail">
+                    <img width="50%" src="bathroomObjectsCard.PNG" alt="bathroom Objects Card">
+                    <div class="caption">
+                        <h4>Bathroom Objects</h4>
+                        <p>Thi is the card for 20 of the bathroom objects in Spanish.</p>
+                        <p><a href="BathroomObjects.html" class="btn btn-primary" role="button">Play Bathroom Objects Bingo</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
         
        <div class="panel panel-info">
