added body parts bingo

--- a/index.html
+++ b/index.html
@@ -92,8 +92,18 @@
                     <img width="50%" src="bathroomObjectsCard.PNG" alt="bathroom Objects Card">
                     <div class="caption">
                         <h4>Bathroom Objects</h4>
-                        <p>Thi is the card for 20 of the bathroom objects in Spanish.</p>
+                        <p>This is the card for 20 of the bathroom objects in Spanish.</p>
                         <p><a href="BathroomObjects.html" class="btn btn-primary" role="button">Play Bathroom Objects Bingo</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 card">
+                <div class="thumbnail">
+                    <img width="50%" src="bodyPartsCard.PNG" alt="Body Parts Card">
+                    <div class="caption">
+                        <h4>Body Parts</h4>
+                        <p>This is the card for 20 of the Body parts in Spanish.</p>
+                        <p><a href="BodyParts.html" class="btn btn-primary" role="button">Play Body Parts Bingo</a></p>
                     </div>
                 </div>
             </div>
