fixed thumbnail error

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="col-xs-12 col-md-6 col-lg-4 card">
                 <div class="thumbnail">
-                    <img width="50%" src="bodyPartsCard.PNG" alt="Body Parts Card">
+                    <img width="50%" src="bodyPartsCard.png" alt="Body Parts Card">
                     <div class="caption">
                         <h4>Body Parts</h4>
                         <p>This is the card for 20 of the Body parts in Spanish.</p>
